syntax = "proto3";
package monitoringservice;


service ClientService {
  rpc Process(Request) returns (Response) {}
}

enum MetricsType {
	CONNECTIONS_NUMBERS = 0;
}

message ConnectionsNumbersRequest {
	int32 since = 1;
	int32 until = 2;
}


message Request {
	MetricsType metrics_type = 1;
	oneof request {
		ConnectionsNumbersRequest connections_numbers_request = 2;
	}
}

message Response {
	MetricsType metrics_type = 1;
	oneof response {
		ConnectionsNumbersResponse connections_numbers_response = 2;
	}
}

message ConnectionsNumbersResponse {
	repeated ConnectionsNumber connections_numbers = 1;
}

message ConnectionsNumber {
	int32 time = 1;
	int32 connections_number = 2;
}
